--- a/XpandTest6/appsettings.Development.json
+++ b/XpandTest6/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=usersDB;Trusted_Connection=True;"
   }
 }
